<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@android:color/white"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/quiz"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/question_one_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q_1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/question_one_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/a_programmer_is_to_a_computer_as_a_teacher_is_to" />

            <RadioGroup
                android:id="@+id/question_one_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/question_one_radio_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_desk" />

                <RadioButton
                    android:id="@+id/question_one_radio_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_student" />

                <RadioButton
                    android:id="@+id/question_one_radio_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_library" />

                <RadioButton
                    android:id="@+id/question_one_radio_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_principal" />

            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/question_two_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q_2"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/question_two_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/what_is_fifo" />

            <EditText
                android:id="@+id/question_two_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/question_three_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q_3"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/question_three_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/select_the_functional_programming_language" />

            <CheckBox
                android:id="@+id/question_three_check_box_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lisp" />

            <CheckBox
                android:id="@+id/question_three_check_box_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/erlang" />

            <CheckBox
                android:id="@+id/question_three_check_box_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/haskell" />

            <CheckBox
                android:id="@+id/question_three_check_box_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/java" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/question_four_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q_4"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/question_four_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/entering_comments_is_a_useless_task_it_will_not_help_in_anyway" />

            <RadioGroup
                android:id="@+id/question_four_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/question_four_radio_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/true_choice" />

                <RadioButton
                    android:id="@+id/question_four_radio_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/false_choice" />

            </RadioGroup>


        </LinearLayout>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/submit" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>